assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&family=Montserrat&display=swap');

body{
    padding: 0px;
    margin: 0px;
    background: url(../images/backgrounds/background.jpg) no-repeat center center;
    background-size: cover;
    background-attachment: fixed;
    border: 0px;
    overflow-x: hidden;
    font-family: 'montserrat', sans-serif;
    text-align: center;
}
h1, h2, h3, h4, h5{
    font-family: 'libre baskerville', serif;
    margin: 0px;
    padding: 0px;
}
/* ----------------STYLINGS OF MAIN LANDING PAGE------------------- */
.landing-heading{
    color: rgb(255, 255, 255);
    font-size: 200%;
    text-align: center;
    padding-top: 40px;
    margin-top: 0px;
}
.landing-sub-heading{
    color: rgb(255, 255, 255);
    text-align: center;
    margin-bottom: 30px;
}
.book-image{
    width: 90px;
    height: 65px;
    border: 2px solid black;
    background-color: white;
    border-radius: 25px;
    float: left;
    margin-top: 5px;
    margin-left: 5px;
}
.landing-quiz{
    border-radius: 30px;
    border: 2px solid black;
    height: 80px;
    width: 600px;
    padding-right: 100px;
    margin: auto;
    box-shadow: 0 40px 50px 0 rgba(24, 24, 24, 0.747), 0 10px 50px 0 rgba(0,0,0,0.7);
    text-align: center;
    color: black;
    background-color: white;
    margin-top: 5px;
    margin-bottom: 5px;
}
.book-link{
    text-decoration: none;
}
.landing-quiz:hover{
    background-color: rgba(153, 153, 153, 0.568);
}
.image-1{
    background: url(../images/book-covers/book1-cover.jpg) no-repeat center center;
    background-size: cover;
}
.image-2{
    background: url(../images/book-covers/book2-cover.jpg) no-repeat center center;
    background-size: cover;
}
.image-3{
    background: url(../images/book-covers/book3-cover.jpg) no-repeat center center;
    background-size: cover;
}
.image-4{
    background: url(../images/book-covers/book4-cover.jpg) no-repeat center center;
    background-size: cover;
}
.image-5{
    background: url(../images/book-covers/book5-cover.jpg) no-repeat center center;
    background-size: cover;
}
.image-6{
    background: url(../images/book-covers/book6-cover.jpg) no-repeat center center;
    background-size: cover;
}
.image-7{
    background: url(../images/book-covers/book7-cover.jpg) no-repeat center center;
    background-size: cover;
}
/* ----------------STYLINGS OF Titles on Quiz pages------------------- */
#bottomLinks, #topLinks{
    display: none;
}
.home, #reveal, #refresh{
    margin-top: 30px;
    display: inline-block;
    width: 200px;
}
.tick, .tick > img{
    width: 40px;
    height: 40px;
    margin: auto;
}
.tick{
    display: none;
}
.home-link{
    height: 50px;
    font-size: xx-large;
    border-radius: 20px;
    padding: 10px;
}
.book-1, .link-1{
    background-color: #BB0A24;
    color: #FEC20C;
    border: 2px solid #4D767B;
}
.book-2, .link-2{
    background-color: #27467d;
    color: #94e264;
    border: 2px solid #C62022;
}
.book-3, .link-3{
    background-color: #721A84;
    color: #F9CA96;
    border: 2px solid #4F9188;
}
.book-4, .link-4{
    background-color: #EE1530;
    color: #102657;
    border: 2px solid #3C9BC0;
}
.book-5, .link-5{
    background-color: #FFB41C;
    color: #B4020E;
    border: 2px solid #50516A;
}
.book-6, .link-6{
    background-color: #253AA0;
    color: #00AB00;
    border: 2px solid #00AB00;
}
.book-7, .link-7{
    background-color: #000000;
    color: #FFFFFF;
    border: 2px solid #CC5020;
}
.select-quiz-heading{
    text-transform: uppercase;
    margin-top: 15px;
    margin-bottom: 0px;
}
.title{
    margin-top: 0px;
    margin-bottom: 10px;
    font-style: italic;
}
.book-1-title, .book-6-title, .book-7-title{
    color: #FFFFFF;
}
.book-2-title{
    color: #ffffff;
    text-shadow: 1px 1px #c62022;
}
.book-3-title{
    color: #6ec5ba;
}
.book-4-title{
    color: #000000;
}
.book-5-title{
    color: #343442;
}

/* ----------------STYLINGS OF QUIZ PAGES------------------- */
#quiz-container{
    background-color: rgba(255, 255, 255, 0.74);
    width: 60%;
    margin: auto;
    text-align: center;
    padding-bottom: 50px;
    padding-top: 30px;
}
#radio-select{
    margin-bottom: 10px;
}
label{
    display: inline-block;
    width: 80%;
    padding: 10px;
    border: solid 2px #ccc;
    background-color: white;
    border-radius: 30px;
    height: 50px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: auto;
    margin-bottom: 10px;
    transition: all;
}
label:hover{
    background-color: rgba(177, 175, 175, 0.747);
}
#quiz-questions{
    padding-top: 50px;
    margin-left: 100px;
    margin-right: 100px;
}
#submit{
    margin-bottom: 20px;
    width: 50%;
    height: 50px;
    border-radius: 20px;
}
.quiz-page-heading{
    width: 80%;
    border-radius: 20px;
    margin: auto;
    margin-top: 30px;
}
input[type="radio"]{
    display: none;
}
input[type="radio"]:checked + label{
    border: solid 2px rgb(43, 43, 43);
    background-color: rgb(170, 170, 170);
}
#div404{
    border-radius: 40px;
    border: 2px solid rgb(71, 71, 71);
    background-color: rgba(236, 236, 236, 0.788);
    width: 500px;
    height: 220px;
    margin: auto;
    text-align: center;
    color: black;
    margin-top: 200px;
    padding: 60px;
}  
#reparo{
    border: solid 2px rgb(43, 43, 43);
    background-color: rgb(88, 88, 88); 
    width: 200px;
    height: 50px;
    border-radius: 30px;
    line-height: 50px;
    color: white;
    margin: auto;
    margin-top: 30px;
}
#reparo:hover{
    background-color: rgb(141, 141, 141); 
}
#ohno{
    font-size: 400%;
}
#indexlink{
    text-decoration: none;
}
/* For how to play game pop-up and footer  */
#indexfooter{
    height: 80px;
    line-height: 70px;
    color: white;
    width: 100vw;
    background-color: rgba(197, 197, 197, 0.863);
    border-top: 2px solid white;
    text-align: center;
    margin-top: 50px;
    position: fixed;
    bottom: 0px;
}
footer a{
    color: rgb(102, 102, 102);
    font-size: 200%;
    margin-left: 20px;
    margin-right: 20px;
}
footer a:hover{
    color:rgb(255, 255, 255);
}
.fa-play{
    font-size: 150%;
    margin-bottom: 10px;
    color: rgb(122, 122, 122);
}
#myBtn{
    margin-top: 30px;
    width: 150px;
    padding: 10px;
    background-color: white;
    border-radius: 15px;
    margin-bottom: 110px;
}
#myBtn:hover{
    background-color: rgb(172, 172, 172);
}
/* Following code from https://www.w3schools.com/howto/howto_css_modals.asp edited for use on the Harry Potter Quiz website*/

/* The Modal transparent background filling whole screen */
.modal{
    display: none; 
    position: fixed; 
    z-index: 1; 
    padding-top: 100px; 
    left: 0;
    top: 0;
    width: 100%; 
    height: 100%; 
    overflow: auto; 
    background-color: rgba(0,0,0,0.4);
}
.modal-content{
    background-color: #fefefe;
    margin-top: 400px;
    margin: auto;
    padding: 20px;
    border: 1px solid #888;
    width: 450px;
    height: 500px;
}
#modalHeading{
    line-height: 50px;
}
#instructionList{
    text-align: left;
    padding-right: 20px;
}
.close {
    color: #666666;
    float: right;
    font-size: 300%;
    width: 100%;
    text-align: right;
    font-weight: bold;
    line-height: 10px;
} 
.close:hover,
.close:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
}
/* END OF CREDIT */
  /*Responsiveness-------------------------------------------------------------------------------*/
@media screen and (max-width: 1020px){
    .home, #reveal, #refresh{
        width: 150px;
    }
}
@media screen and (max-width: 960px){
    #quiz-container{
        width: 90%;
    }  
}
@media screen and (max-width: 750px){
    .landing-quiz{
        height: 80px;
        width: 400px;
    }
}
@media screen and (max-width: 550px){
    .landing-heading{
        font-size: large;
    }
    .landing-sub-heading{
        font-size: small;
    }
    .landing-quiz{
        height: 80px;
        width: 400px;
        padding-right: 0px;
    }
    #quiz-questions{
        margin-left: 20px;
        margin-right: 20px;
        font-size: small;
        padding-top: 20px;
    }
    label{
        height: 30px;
        margin-bottom: 5px;
        font-size: small;
    }
    .tick, .tick > img{
        width: 20px;
        height: 20px;
    }
    .home, #reveal, #refresh{
        width: 90px;
        font-size: x-small;
    }
    #indexfooter{
        margin-top: 20px;
        position: fixed;
        bottom: 0px;
    }
}
@media screen and (max-width: 500px){
    .modal-content {
        width: 230px;
        height: 500px;
        padding-right: 10px;
        padding-left: 0px;
        font-size: 70%;
    }
}
@media screen and (max-width: 450px){
    footer a{
        font-size: 130%;
        margin-left: 15px;
        margin-right: 15px;
    }
    .select-quiz-heading{
        font-size: medium;
        margin-top: 10px;
    }
    .landing-quiz{
        height: 50px;
        width: 270px;
        padding-right: 0px;
        border-radius: 20px;
    }
    .title{
        font-size: x-small;
    }
    .book-image{
        height: 35px;
        width: 50px;
        border-radius: 15px;
    }
    #indexfooter{
        height: 50px;
        line-height: 50px;
    }
}
@media screen and (max-width: 350px){
    label{
        height: auto;
    }
    footer a{
        font-size: 130%;
        margin-left: 5px;
        margin-right: 5px;
    }
}
@media screen and (max-width: 330px){
    .landing-heading{
          font-size: medium;
    }
}
@media screen and (max-width: 300px){
    .select-quiz-heading{
        font-size: small;
    }
    .landing-quiz{
        width: 200px;
      }
    .title{
        font-size: xx-small;
    }
    .book-image{
        width: 40px;
    }
    #myBtn{
        width: 100px;
    }
}
@media screen and (max-width: 250px){
    .modal-content {
        width: 130px;
        height: 550px;
        padding-right: 0px;
        font-size: 50%;
    }
    .close{
        margin-right: 10px;    
    }
}
@media screen and (max-width: 220px){
    footer a{
        font-size: 100%;
    }
}
@media screen and (max-width: 210px){
    footer a{
        font-size: 85%;
        margin-left: 0px;
        margin-right: 0px;
    }
    .book-image{
        display: none;
    }
    .landing-quiz{
        width: 155px;
    }
}

